--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ button{
     float: left;
     margin-left: 50px;
     text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .btn{
